<resources>
    <!-- all strings -->
    <string name="app_name">Cryptocurrency Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_a_member">Already a Member ?</string>
    <string name="sign_in">Sign In</string>
    <string name="register_now">Register Now</string>
    <string name="log_in">Log In</string>
    <string name="send_now">Send Now</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="password">Password</string>
    <string name="not_a_member_yet">Not a member yet ?</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password_without_exclamatory">Forgot Password</string>
    <string name="embarrassing">Embarrassing hidden in the middle of text.All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_splash">SplashActivity</string>
</resources>
