<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
<!-- top section -->
    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/toolbar_bg" />
<!-- back button -->
    <ImageButton
        android:id="@+id/image_button_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/backarrow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">
<!-- forgot password -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/forgot_password_without_exclamatory"
            android:textColor="@color/text_color"
            android:textSize="25dp" />
<!-- forgot password details -->
        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:text="@string/embarrassing"
            android:textColor="@color/text_color"
            android:textSize="10dp"
            android:textStyle="bold" />
    </LinearLayout>

<!-- content section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bg"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"

        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">
<!-- email field -->
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/login_screen_edittext_bg"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="20dp"
                    android:textColor="#000000"
                    android:textColorHint="@color/hint_text_color" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/email" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/login_screen_border_bg">

            </View>
        </LinearLayout>

<!-- send now button -->
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/btn_Send_now"
            android:background="@drawable/login_btn_bg"
            android:text="@string/send_now"
            android:textAllCaps="false"
            android:textColor="@color/text_color" />


    </LinearLayout>
</RelativeLayout>
