<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#ffffff" android:clickable="true"
    android:layout_height="match_parent">
<!-- top section -->
    <ImageView
        android:id="@+id/bg"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
        android:src="@drawable/toolbar_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        android:orientation="vertical">
<!-- register now -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/register_now"
            android:textColor="@color/text_color"
            android:textSize="25dp" />
<!-- register now details -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/embarrassing"
            android:textColor="@color/text_color"
            android:textSize="12dp"
            android:textStyle="bold" />
    </LinearLayout>
<!-- content section -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/bg"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!-- full name field -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/full_name" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!--email field -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/email" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!-- password field -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/password" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!-- confirm password field -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/password" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!-- phone number field  -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/phone" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
<!--country field -->
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/login_screen_edittext_bg"
                        android:hint="@string/country"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint_text_color" />

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/country" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/login_screen_border_bg">

                </View>
            </LinearLayout>
<!-- sign up button -->
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/text_color" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal">
<!-- already a member text -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:text="@string/already_a_member"
                    android:textColor="#676767"
                    android:textStyle="bold" />
<!-- sign in text -->
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingLeft="3dp"
                    android:paddingRight="5dp"
                    android:text="@string/sign_in"
                    android:textColor="#5FAEFD"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
